# dsa-socratic-agent

./: .gitignore  Duc_BA_20241582E.docx  Duc_BA_20241582E_slides.pptx  Duc_BA_20241582E_slides.pptx.inspect.ndjson  README.md  app.py  langgraph.json  presentation_script.md  pyproject.toml  streamlit_app.py  test.py
.codex_presentation_tmp/preview/: slide-01.layout.json  slide-02.layout.json  slide-03.layout.json  slide-04.layout.json  slide-05.layout.json  slide-06.layout.json  slide-07.layout.json  slide-08.layout.json  slide-09.layout.json  slide-10.layout.json  slide-11.layout.json  slide-12.layout.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: agent-design.md  code-analysis.md  extended-design.md  hint-strategy.md  problem-taxonomy.md  project-scope.md  quality-agents.md  roadmap.md  source-architecture.md  system-architecture.md
src/dsa_agent/: __init__.py  classifier.py  cli.py  code_analysis.py  graph_workflow.py  hints.py  intent.py  llm_client.py  models.py  orchestrator.py  studio.py
src/dsa_agent/agents/: __init__.py  intent_detector.py  json_tools.py  pedagogy_critic.py  problem_classifier.py  session_title.py  (+2 more)
tests/: test_agent.py
tools/: add_report_code_assets.py  build_dsa_agent_slides.mjs  clean_report_focus_tech.py  enhance_report_for_extended_design.py  expand_report_content.py  repair_report_tail.py  rewrite_report_preserve_format.py  rewrite_report_tech_and_conclusion.py  trim_report_sections.py  update_report_assets.py
(+4 files in other folders)
